--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,9 @@
-icewm -- authors file.  2022-10-03
+icewm -- authors file.  2022-10-06
 
 Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Author: Alexey Yaryshev <clarkez344@gmail.com>
+Author: Hugo Carvalho <hugokarvalho@hotmail.com>
+Author: Ferdinand Galko <galko.ferdinand@gmail.com>
 Author: Freek de Kruijf <freek@opensuse.org>
 Author: David Medina <medipas@gmail.com>
 Author: Yasuhiko Kamata <belphegor@belbel.or.jp>
@@ -22,13 +25,11 @@ Author: marcelo cripe <marcelocripe@gmail.com>
 Author: Luiz Fernando Ranghetti <elchevive68@gmail.com>
 Author: Paolo Za <zapaolo@email.it>
 Author: Kukuh Syafaat <syafaatkukuh@gmail.com>
-Author: Hugo Carvalho <hugokarvalho@hotmail.com>
 Author: Rodrigo Macedo <rmsolucoeseminformatic4@gmail.com>
 Author: Sarah Kriesch <ada.lovelace@gmx.de>
 Author: Ghassan <ghassan.alnajjar1984@gmail.com>
 Author: Mindaugas Baranauskas <opensuse.lietuviu.kalba@gmail.com>
 Author: Taras Panchenko <top39@ukr.net>
-Author: Ferdinand Galko <galko.ferdinand@gmail.com>
 Author: wallon <franckjl@hotmail.com>
 Author: TarasPanchenko <90216151+TarasPanchenko@users.noreply.github.com>
 Author: Efstathios Iosifidis <eiosifidis@gmail.com>
